--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,17 @@ body {
   margin: 0;
 }
 
-h1, h2{
+h1 {
+  color: #49a6e9;
   font-size: 1rem;
 }
 
-h1, span {
-  color: #55CEED;
+h2 {
+  font-size: 1rem;
+}
+
+span {
+  color: #49a6e9;
 }
 
 #nav {
@@ -17,7 +22,7 @@ h1, span {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 50px;
+  /* height: 50px; */
   box-shadow: 0px -15px 30px;
 }
 
@@ -35,7 +40,7 @@ h1, span {
 }
 
 .wrapper {
-  background-color: #000;
+  background-color: rgb(0,0,0,0.9);
   border-radius: 8px;
   margin-bottom: 20px;
 
