--- a/css/styles.css
+++ b/css/styles.css
@@ -43,11 +43,27 @@ span {
   background-color: rgb(0,0,0,0.9);
   border-radius: 8px;
   margin-bottom: 20px;
-
+  text-align: center;
 }
 
 .background-color-text {
   color: #fff;
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin: 15px
+}
+
+.click {
+  background-color: transparent;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  font-weight: 500;
+  height: 45px;
+  width: 140px;
+}
+
+.click:hover {
+  background-color: #000;
+  color: #fff;
+  transition: background-color 500ms linear;
 }
