--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F1f5f8;
+  background-color: #fff;
   font-family: 'Roboto', sans-serif;
   font-size: 0.875rem;
   letter-spacing: 0.1rem;
@@ -53,7 +53,7 @@ span {
   margin: 15px
 }
 
-.click {
+#btn {
   background-color: transparent;
   border: 2px solid #000;
   border-radius: 8px;
@@ -64,7 +64,7 @@ span {
   width: 140px;
 }
 
-.click:hover {
+#btn:hover {
   background-color: #000;
   color: #fff;
   transition: background-color 500ms linear;
