--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,14 @@ body {
   margin: 0;
 }
 
+button {
+  cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem
+}
+
 h1 {
   color: #49a6e9;
   font-size: 1rem;
@@ -51,6 +59,15 @@ a:hover {
   box-shadow: 0px -15px 30px;
 }
 
+.switch {
+  background-color: inherit;
+  border: none;
+}
+
+.switch:hover {
+  color: #49a6e9;
+}
+
 #main {
   display: flex;
   flex-direction: column;
@@ -77,8 +94,6 @@ a:hover {
   border: 2px solid #000;
   border-radius: 8px;
   cursor: pointer;
-  font-size: 1rem;
-  font-weight: 600;
   height: 45px;
   width: 140px;
 }
